@@ -27,6 +27,7 @@ enum CursorType {
   CURSOR_ZOOM,
   CURSOR_INSERT,
   CURSOR_ROTATE,
+  CURSOR_SCALE,
   CURSOR_COLLIDER
 };
 
