@@ -47,6 +47,7 @@ public:
   virtual void on_secondary_button_press (int x, int y) {}
   virtual void on_secondary_button_release (int x, int y) {}
   
+  virtual void on_scale_press (int x, int y) {}
   virtual void on_duplicate_press (int x, int y) {}
   virtual void on_delete_press (int x, int y) {}
   virtual void on_fix_press (int x, int y) {}
